<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:padding="12dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/icon_color"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Postavke"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_settings"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/user_icon" />

            <TextView
                android:id="@+id/user_name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="Korisnik"
                android:textColor="@color/primaryTextColor"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/user_email_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:text="email@example.com"
                android:textColor="@color/secondaryTextColor"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/change_icon_button"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_background"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="Promjeni sliku"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:background="@color/secondaryBackgroundColor"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/night_mode_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_background"
                        android:padding="12dp"
                        android:src="@drawable/night_mode" />
                    <TextView
                        android:id="@+id/night_mode_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_toEndOf="@id/night_mode_icon"
                        android:layout_marginStart="20dp"
                        android:text="Noćni Mod"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/night_mode_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:theme="@style/CustomSwitchTheme" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">
                    <ImageView
                        android:id="@+id/notification_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_background"
                        android:padding="9dp"
                        android:src="@drawable/notifications_icon" />
                    <TextView
                        android:id="@+id/notification_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/notification_icon"
                        android:text="Notifikacije"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />
                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/notifications_switch"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:theme="@style/CustomSwitchTheme" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/security_privacy_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/security_privacy_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_background"
                        android:padding="9dp"
                        android:src="@drawable/security_privacy_icon" />
                    <TextView
                        android:id="@+id/security_privacy_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/security_privacy_icon"
                        android:text="Sigurnost i Privatnost"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@color/secondaryBackgroundColor"
                android:orientation="vertical"
                android:padding="15dp">

                <RelativeLayout
                    android:id="@+id/language_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/language_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_background"
                        android:padding="12dp"
                        android:src="@drawable/language_icon" />
                    <TextView
                        android:id="@+id/language_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/language_icon"
                        android:text="Jezik"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/about_us_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/about_us_icon"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/rounded_background"
                        android:padding="9dp"
                        android:src="@drawable/about_us_icon" />
                    <TextView
                        android:id="@+id/about_us_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="20dp"
                        android:layout_toEndOf="@id/about_us_icon"
                        android:text="O nama"
                        android:textColor="@color/primaryTextColor"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>
            <Button
                android:id="@+id/logout_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/red"
                android:padding="16dp"
                android:text="Odjava"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>