<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/chat"
        android:icon="@drawable/ic_chat" />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout_icon" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings" />

</menu>