<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryBackgroundColor"
    tools:context=".AboutUsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/secondaryBackgroundColor">

        <ImageView
            android:id="@+id/about_back_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_arrow_back"
            app:tint="@color/icon_color"
            android:padding="8dp"
            android:contentDescription="Natrag"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="O nama"
            android:textColor="@color/primaryTextColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center"/>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar_about"
        android:padding="16dp"
        android:text="MetaPost v1.0\n\nAutor: Domenik Milohanić\n\nOva aplikacija je izrađena kao dio završnog rada."
        android:textColor="@color/primaryTextColor"
        android:textSize="18sp"
        android:gravity="center"/>

</RelativeLayout>